--- a/SocketExtensions/SocketExtensions.csproj
+++ b/SocketExtensions/SocketExtensions.csproj
@@ -15,6 +15,7 @@
     <RepositoryUrl>https://github.com/Zintom/SocketExtensions</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
