--- a/SocketExtensions/SocketExtensions.csproj
+++ b/SocketExtensions/SocketExtensions.csproj
@@ -15,7 +15,8 @@
     <RepositoryUrl>https://github.com/Zintom/SocketExtensions</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <Version>1.0.1</Version>
+    <Version>1.1.0</Version>
+    <PackageReleaseNotes>Gives access to the ISendReceiveAsync interface which allows calling code to mock out connections without actually using sockets or other types of connection. LengthPrefixedSocket implements ISendReceiveAsync.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
