--- a/SocketExtensions/SocketExtensions.csproj
+++ b/SocketExtensions/SocketExtensions.csproj
@@ -15,8 +15,9 @@
     <RepositoryUrl>https://github.com/Zintom/SocketExtensions</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <Version>1.1.1</Version>
-    <PackageReleaseNotes>Extended the ISendReceiveAsync interface.</PackageReleaseNotes>
+    <Version>1.2.1</Version>
+    <PackageReleaseNotes>The BeginReceiveLP method callback now provides the buffer as a parameter.</PackageReleaseNotes>
+    <FileVersion>1.2.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
